--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,8 +1,28 @@
-<h2 class="text-light">Welcome
+<h2 class="text-light">Hello. >><a href="https://t.me/joinchat/DQ56VEbfV3uIQlrJphtLbw" target="_blank">Join the
+    community
+    on telegram group</a><< so you can get answers quickly.
     <small></small>
 </h2>
+Autocoin allows you to
+<ul>
+    <li>
+        <a routerLink="/arbitrage-monitor">View the arbitrage opportunities</a>
+        <p>That works straight away, you don't have to provide API keys for your exchange accounts</p>
+    </li>
+    <li>
+        <a routerLink="/wallets">View all wallets (exchange account balances) in one place</a>
+        <p>That needs exchange API keys provided</p>
+    </li>
+    <li>
+        <a routerLink="/orders">View and cancel open orders</a>
+        <p>That needs exchange API keys provided</p>
+    </li>
+    <li>
+        <a routerLink="/trading-automation">Run multiple simple trading strategies</a> like 'sell XRP/BTC when price
+        grows bigger than ..' without blocking your
+        balances in orders.
+        Orders will be created as soon as market meets your criteria and it can wait for the criteria for a long time.
+        <p>That needs exchange API keys provided</p>
+    </li>
 
-<p>Start with adding exchange keys.</p>
-<p>
-    Depending on your subscription you might have one user - your keys or add multiple users to manage multiple exchange  accounts of many users at once.
-</p>
+</ul>
