--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -10,18 +10,7 @@ Autocoin allows you to
         <p>That works straight away, you don't have to provide API keys for your exchange accounts</p>
     </li>
     <li>
-        <a routerLink="/wallets">View all wallets (exchange account balances) in one place</a>
-        <p>That needs exchange API keys provided</p>
-    </li>
-    <li>
-        <a routerLink="/orders">View and cancel open orders</a>
-        <p>That needs exchange API keys provided</p>
-    </li>
-    <li>
-        <a routerLink="/trading-automation">Run multiple simple trading strategies</a> like 'sell XRP/BTC when price
-        grows bigger than ..' without blocking your
-        balances in orders.
-        Orders will be created as soon as market meets your criteria and it can wait for the criteria for a long time.
+        <a routerLink="/wallets">View exchange balances</a>
         <p>That needs exchange API keys provided</p>
     </li>
 
