--- a/src/app/layout/api-keys/exchange-user-edit/exchange-user-edit.component.html
+++ b/src/app/layout/api-keys/exchange-user-edit/exchange-user-edit.component.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-md-6">
                 <fieldset class="form-group">
-                    <label>Autocoin user name (eg. John Doe, me, wife, test-keys)</label>
+                    <label>Keys group name (e.g. 'john', 'test', 'wife')</label>
                     <input class="form-control" [(ngModel)]="exchangeUser.name" name="name" required>
                 </fieldset>
 
