Switched to light theme

--- a/src/app/layout/api-keys/exchange-user-create/exchange-user-create.component.html
+++ b/src/app/layout/api-keys/exchange-user-create/exchange-user-create.component.html
@@ -1,5 +1,5 @@
 <div>
-    <app-page-header [heading]="'Add user'" [icon]="'fa-user'"
+    <app-page-header [heading]="'Add key group'" [icon]="'fa-user'"
                      [parents]="[ { heading: 'Exchange users', link: '/api-keys', icon: 'users' } ]"></app-page-header>
 
     <form (ngSubmit)="onSubmit(createForm)" #createForm="ngForm">
