--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,4 +1,4 @@
-<h2 class="text-light">Hello. >><a href="https://t.me/joinchat/DQ56VEbfV3uIQlrJphtLbw" target="_blank">Join the
+<h2>Hello. >><a href="https://t.me/joinchat/DQ56VEbfV3uIQlrJphtLbw" target="_blank">Join the
     community
     on telegram group</a><< so you can get answers quickly.
     <small></small>
