--- a/src/app/layout/settings/user-account-password/user-account-password.component.html
+++ b/src/app/layout/settings/user-account-password/user-account-password.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3 bg-dark">
+<div class="card mb-3">
     <div class="card-header">Your login password</div>
     <div class="card-body">
         <div class="row">
