--- a/src/app/layout/arbitrage-monitor/two-leg-arbitrage-opportunities-table/two-leg-arbitrage-opportunities-table.component.html
+++ b/src/app/layout/arbitrage-monitor/two-leg-arbitrage-opportunities-table/two-leg-arbitrage-opportunities-table.component.html
@@ -3,7 +3,7 @@
         Showing {{profitOpportunities.length}} of {{totalNumberOfUnfilteredOpportunities}} opportunities
     </div>
     <div class="table-responsive">
-        <table class="table table-striped table-dark table-hover">
+        <table class="table table-striped table-hover">
             <thead>
             <tr>
                 <th scope="col">Profit <i class="fa fa-arrow-down" aria-hidden="true"></i></th>
