--- a/src/app/layout/settings/two-factor-authentication/two-factor-authentication.component.html
+++ b/src/app/layout/settings/two-factor-authentication/two-factor-authentication.component.html
@@ -1,4 +1,4 @@
-<div class="card mb-3 bg-dark">
+<div class="card mb-3">
     <div class="card-header">2-Step Verification</div>
     <div class="card-body">
         <div class="row">
