--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -22,7 +22,7 @@
     </div>
 </div>
 <div>
-    <div *ngFor="let exchangeUser of exchangeUsers" class="card mb-3 bg-dark exchange-user-wallet">
+    <div *ngFor="let exchangeUser of exchangeUsers" class="card mb-3 exchange-user-wallet">
         <div class="card-header d-flex flex-column">
             <div class="d-flex flex-row mb-2">
                 <h3><i class="fa fa-user"></i> {{ exchangeUser.name }}</h3>
@@ -55,7 +55,7 @@
                   class="alert">No currencies held</span>
             <div *ngIf="exchangeBalance.currencyBalances.length > 0 && exchangeBalance.errorMessage == null"
                  class="table-responsive mb-3">
-                <table class="card-body table table-sm table-dark table-hover">
+                <table class="card-body table table-sm table-hover">
                     <thead>
                     <tr>
                         <th>Currency</th>
