Add free VS pro plan benefits with call to action

--- a/src/app/layout/arbitrage-monitor/two-leg-arbitrage-opportunities-table/two-leg-arbitrage-opportunities-table.component.html
+++ b/src/app/layout/arbitrage-monitor/two-leg-arbitrage-opportunities-table/two-leg-arbitrage-opportunities-table.component.html
@@ -3,7 +3,7 @@
         Showing {{profitOpportunities.length}} of {{totalNumberOfUnfilteredOpportunities}} opportunities
     </div>
     <div>
-        <span class="badge badge-warning">Make sure the same symbols at 2 different exchanges means the same currency before making a transfer</span>
+        <span class="badge badge-warning">Before making a transfer make sure the same symbols at 2 different exchanges means the same and withdrawing is not blocked</span>
     </div>
     <div class="table-responsive">
         <table class="table table-striped table-hover">
