--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
@@ -1,6 +1,61 @@
 <div>
     <app-page-header [heading]="'Arbitrage monitor'" [icon]="'fa-calendar'"></app-page-header>
-
+    <div class="col-xs-12 col-sm-12 col-md-10 col-xl-8">
+        <div class="card text-white bg-warning m-2">
+            <div class="card-header">
+                <div class="flex-row">
+                    <div *ngIf="hasArbitrageSubscriptionActive()" class="d-block">
+                        You're using Pro plan
+                    </div>
+                    <div *ngIf="!hasArbitrageSubscriptionActive()" class="d-block">
+                        You're using Free plan. To join Pro plan, ping @mikolaj grzaslewicz on autocoin <a href="https://t.me/joinchat/DQ56VEbfV3uIQlrJphtLbw" target="_blank">telegram group</a> or send an email to mikolaj.grzaslewicz@gmail.com
+                    </div>
+                </div>
+            </div>
+            <div class="card-body pt-0 pb-0" [@myAnimation]="slide">
+                <div class="pt-3 pb-3">
+                    <table class="table table-striped table-hover">
+                        <thead>
+                        <tr>
+                            <th scope="col">Feature</th>
+                            <th scope="col">Free</th>
+                            <th scope="col">Pro</th>
+                        </tr>
+                        </thead>
+                        <tbody>
+                        <tr>
+                            <th>Include trading fee into calculations</th>
+                            <th><i class="fa fa-times" aria-hidden="true"></i></th>
+                            <th><i class="fa fa-check-square" aria-hidden="true"></i></th>
+                        </tr>
+                        <tr>
+                            <th>Include withdrawal fee into calculations</th>
+                            <th><i class="fa fa-times" aria-hidden="true"></i></th>
+                            <th><i class="fa fa-check-square" aria-hidden="true"></i></th>
+                        </tr>
+                        <tr>
+                            <th>Do not show currencies that cannot be withdrawn</th>
+                            <th><i class="fa fa-times" aria-hidden="true"></i></th>
+                            <th>In progress</th>
+                        </tr>
+                        <tr>
+                            <th></th>
+                            <th>Might show opportunities that after including fees generate loss</th>
+                            <th>More reliable</th>
+                        </tr>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+            <div (click)="toggleSubscriptionPlanDetailsVisibility()" class="card-footer toggle-details-visibility">
+        <span>
+                <i *ngIf="showSubscriptionPlanDetails" class="fa fa-angle-double-up"></i>
+                <i *ngIf="!showSubscriptionPlanDetails" class="fa fa-angle-double-down"></i>
+                Show benefits of Pro plan
+        </span>
+            </div>
+        </div>
+    </div>
     <div class="row mb-1">
         <div class="col-12">
             <span>
