Update Pro plan benefits

--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
@@ -36,7 +36,7 @@
                         <tr>
                             <th>Do not show currencies that cannot be withdrawn</th>
                             <th><i class="fa fa-times" aria-hidden="true"></i></th>
-                            <th>In progress</th>
+                            <th><i class="fa fa-check-square" aria-hidden="true"></i></th>
                         </tr>
                         <tr>
                             <th></th>
