Improve wallets view header As user was asking what it means

--- a/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
+++ b/src/app/layout/arbitrage-monitor/arbitrage-monitor.component.html
@@ -1,5 +1,10 @@
 <div>
     <app-page-header [heading]="'Arbitrage monitor'" [icon]="'fa-calendar'"></app-page-header>
+    <div class="row">
+        <div class="col-12">
+            Does not require API keys
+        </div>
+    </div>
     <div class="col-xs-12 col-sm-12 col-md-10 col-xl-8">
         <div class="card text-white bg-warning m-2">
             <div class="card-header">
