--- a/src/app/layout/wallets/wallets.component.html
+++ b/src/app/layout/wallets/wallets.component.html
@@ -1,4 +1,9 @@
-<app-page-header [heading]="'Wallets'"></app-page-header>
+<app-page-header [heading]="'View wallets from many exchanges in one place'"></app-page-header>
+<div class="row">
+    <div class="col-12">
+        Requires API keys
+    </div>
+</div>
 <div class="row">
     <div class="col-12">
         <button class="btn btn-sm btn-info mr-1 mb-1" (click)="refreshAllWallets()"
